@@ -116,6 +116,9 @@
                 <version>3.2.5</version>
                 <configuration>
                     <useModulePath>false</useModulePath> <!-- importante si usas Java 9+ con módulos -->
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/net/bytebuddy/byte-buddy-agent/1.17.5/byte-buddy-agent-1.17.5.jar" -XX:+EnableDynamicAgentLoading
+                    </argLine>
                 </configuration>
             </plugin>
 
